partman-auto-lvm (28) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Update perform_recipe_by_lvm to use extents when calling lv_create().
    Depends: partman-lvm (>= 62)

 -- Jérémy Bobbio <lunar@debian.org>  Sat, 19 Jul 2008 22:29:05 +0000

partman-auto-lvm (27) unstable; urgency=low

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Basque (eu.po) by Iñaki Larrañaga Murgoitio
  * Hungarian (hu.po) by SZERVÁC Attila
  * Kurdish (ku.po) by Erdal Ronahi
  * Marathi (mr.po) by Sampada
  * Panjabi (pa.po) by Amanpreet Singh Alam

 -- Otavio Salvador <otavio@debian.org>  Thu, 08 May 2008 00:54:09 -0300

partman-auto-lvm (26) unstable; urgency=low

  [ Frans Pop ]
  * Create envelope partition on primary partition if possible.
    Requires partman-auto (>= 74).
  * Remove dependency on lvm2-udeb as partman-lvm already depends on it.

  [ Updated translations ]
  * Finnish (fi.po) by Esko Arajärvi
  * Hindi (hi.po) by Kumar Appaiah
  * Indonesian (id.po) by Arief S Fitrianto
  * Panjabi (pa.po) by Amanpreet Singh Alam
  * Turkish (tr.po) by Recai Oktaş
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Otavio Salvador <otavio@debian.org>  Fri, 15 Feb 2008 15:32:55 -0200

partman-auto-lvm (25) unstable; urgency=low

  [ Frans Pop ]
  * Lock devices that are used for physical volumes, as is done when setting
    up LVM using manual partitioning. Requires: partman-lvm (>= 58).
  * auto-lvm.sh: avoid double sourcing of base.sh.
  * auto-lvm.sh: call device_cleanup_partitions() to ensure we remove obsolete
    partition info after committing changes. Requires: partman-base (>= 115).

  [ Colin Watson ]
  * Don't emit partman-auto-lvm/no_boot if / is outside LVM (e.g. a system
    with the operating system on a relatively small plain block device and a
    large LVM area for services). Reported by Nick Moffitt.

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu