@@ -3,6 +3,8 @@ partman-auto-lvm (28) UNRELEASED; urgency=low
   [ Jérémy Bobbio ]
   * Update perform_recipe_by_lvm to use extents when calling lv_create().
     Depends: partman-lvm (>= 62)
+  * auto_lvm_prepare() now returns 255 instead of 30 for backup like
+    the rest of partman.
 
  -- Jérémy Bobbio <lunar@debian.org>  Sat, 19 Jul 2008 22:29:05 +0000
 
